# starknet-devnet-rs

./: Cargo.toml  rust-toolchain.toml
crates/starknet-devnet-server/src/: builder.rs
crates/starknet-devnet-types/src/: chain_id.rs
crates/starknet-devnet-types/src/rpc/: contract_class.rs
crates/starknet-devnet-types/src/rpc/contract_class/deprecated/: mod.rs
