[workspace]
resolver = "2"
members = [
	"crates/starknet-devnet-types",
	"crates/starknet-devnet-core",
	"crates/starknet-devnet-server",
	"crates/starknet-devnet",
]

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Mario"]
edition = "2021"
repository = "https://github.com/0xSpaceShard/starknet-devnet-rs"
license-file = "LICENSE"
homepage = "https://0xspaceshard.github.io/starknet-devnet-rs"
description = "A local testnet for Starknet"
readme = "README.md"
documentation = "https://0xspaceshard.github.io/starknet-devnet-rs/docs/intro"

exclude = [".github/**", ".devcontainer/**", ".circleci/**"]

keywords = ["starknet", "cairo", "testnet", "local", "server"]


[workspace.dependencies]

# axum
axum = { version = "0.7" }
http-body-util = { version = "0.1" }
tower-http = { version = "0.5", features = ["full"] }

# async
tokio = { version = "1", features = [
	"time",
	"macros",
	"rt-multi-thread",
	"signal",
] }
futures = "0.3"
async-trait = "0.1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# misc
base64 = { version = "0.22" }
clap = { version = "4.3.2", features = ["derive", "env"] }
flate2 = { version = ">= 1.0.26, < 1.0.27" }
nonzero_ext = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_yaml = { version = "0.9.27" }
thiserror = { version = "1.0.32" }
anyhow = "1"
indexmap = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_mt = "4.2.2"
regex_generate = "0.2.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
url = "2.4"
usc = { version = "2.1.0", package = "universal-sierra-compiler" }
num-bigint = { version = "0.4" }

# Starknet dependencies
starknet_api = { version = "0.10.0", features = ["testing"] }
blockifier = { git = "https://github.com/neotheprogramist/blockifier.git", branch = "feat/add-deserialization-serialization", features = ["testing"]}

starknet-rs-signers = { version = "0.8.0", package = "starknet-signers" }
starknet-rs-ff = { version = "0.3.7", package = "starknet-ff" }
starknet-rs-core = { version = "0.10.0", package = "starknet-core" }
starknet-rs-providers = { version = "0.10.0", package = "starknet-providers" }
starknet-rs-accounts = { version = "0.9.0", package = "starknet-accounts" }
starknet-rs-contract = { version = "0.9.0", package = "starknet-contract" }
starknet-rs-crypto = { version = "0.6.2", package = "starknet-crypto" }

# Cairo-lang dependencies
cairo-lang-starknet-classes = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-compiler = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-casm = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-defs = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-diagnostics = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-filesystem = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-lowering = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-semantic = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-sierra = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-sierra-generator = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-sierra-to-casm = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-syntax = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }
cairo-lang-utils = { git = "https://github.com/piotr-stec/cairo.git", branch = "feat/add-new-deps" }

# Inner dependencies
starknet-types = { version = "0.1.2", path = "crates/starknet-devnet-types", package = "starknet-devnet-types" }
starknet-core = { version = "0.1.2", path = "crates/starknet-devnet-core", package = "starknet-devnet-core" }
server = { version = "0.1.2", path = "crates/starknet-devnet-server", package = "starknet-devnet-server" }

# Dependabot alerts
zerocopy = "0.7.31"
unsafe-libyaml = "0.2.10"
h2 = "0.4"

ethers = { version = "2.0.11" }

openssl = { version = "0.10", features = ["vendored"] }

parking_lot = "0.12.3"

# Dev dependencies
serial_test = "3.1.1"
hex = "0.4.3"
lazy_static = { version = "1.4.0" }

# Benchmarking
criterion = { version = "0.3.4", features = ["async_tokio"] }
